vendor/structopt-0.3.21/tests/ui/struct_subcommand.stderr
error: subcommand is only allowed on fields
  --> $DIR/struct_subcommand.rs:12:29
   |
12 | #[structopt(name = "basic", subcommand)]
   |                             ^^^^^^^^^^
